# AstroCollector

./: .gitignore  LICENSE  README.md
ac-backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  pyproject.toml  run-mypy
ac-backend/alembic/: env.py
ac-backend/alembic/versions/: 07ab9c27f0dc_task_results.py  0e57d03bc767_add_exportfile_entity_add_task_.py  13331b4ec65f_tasks_table.py  1b67ca29f0c4_tasks_polymorphism.py  20b74b65090f_add_plugin_id_column.py  2cd829f0a3fe_add_url_and_description_to_catalog_model.py  320b802e2dd5_database_tables_for_tasks.py  5157397eb9a4_add_task_relationships.py  80b7e16d0ace_add_task_status.py  84c7c6251709_rename_photometric_data_columns.py  92c060fc23cf_add_object_identification_flag.py  a1b6e3b23b06_change_filename_to_nullable.py  aad13fc3f8d7_add_light_filter_column.py  b1109fb03411_joined_tasks.py  d5542787e60d_create_a_baseline_migrations.py  e478fa8d63f3_add_users_and_roles.py  f079aeb009d1_create_plugin_table.py
ac-backend/src/: deps.py  main.py
ac-backend/src/aid/: plugin.py
ac-backend/src/apass/: plugin.py
ac-backend/src/applause/: plugin.py
ac-backend/src/celery/: router.py  sync_tasks.py
ac-backend/src/core/: http_client.py  schemas.py
ac-backend/src/core/celery/: celery_worker.py  worker.py
ac-backend/src/core/config/: __init__.py  cache.py  config.py
ac-backend/src/dasch/: dasch_identificator_model.py  dasch_plugin.py
ac-backend/src/data_retrieval/: __init__.py  router.py  schemas.py  service.py
ac-backend/src/data_retriever/: router.py  schemas.py  service.py
ac-backend/src/export/: __init__.py  model.py  router.py  service.py  types.py
ac-backend/src/mast/: kepler_plugin.py  mast_plugin.py  tess_plugin.py
ac-backend/src/mmt/: plugin.py
ac-backend/src/phase_curve/: router.py  schemas.py
ac-backend/src/plugin/: __init__.py  exceptions.py  model.py  plugin_exceptions.py  plugin_model.py  plugin_router.py  plugin_schemas.py  plugin_service.py  router.py  schemas.py  service.py  utils.py
ac-backend/src/so_name_resolving/: __init__.py  router.py  schemas.py
ac-backend/src/tasks/: __init__.py  model.py  router.py  schemas.py  service.py  tasks.py  types.py
ac-backend/src/tess/: plugin.py
ac-backend/src/utils/: utils.py
ac-backend/tests/: conftest.py  test_export_service.py  test_model.py  test_name_resolving.py  test_phase_curve_params.py  test_plugin_service.py  test_repository.py  test_task_integration.py  test_task_router.py  test_task_service.py
ac-backend/tests/services/: .env.example  compose.yml  run-tests.sh
dev/: .env.example  (+2 more)
(+283 files in other folders)
