[project]
name = "ac-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiocache[redis]>=0.12.3",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "alembic>=1.16.1",
    "asgiref>=3.9.1",
    "astropy>=7.1.0",
    "astroquery>=0.4.10",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "celery>=5.5.3",
    "fastapi>=0.115.12",
    "lightkurve>=2.5.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.9.1",
    "pyvo>=1.7",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "types-aiofiles>=24.1.0.20250606",
    "types-requests>=2.32.4.20250611",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
