[project]
name = "ac-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "alembic>=1.16.1",
    "astropy>=7.1.0",
    "astroquery>=0.4.10",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "celery[redis]>=5.5.3",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "lightkurve>=2.5.1",
    "mypy>=1.16.1",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.2.0",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.9.1",
    "pytest>=9.0.1",
    "pyvo>=1.7",
    "redis>=5.2.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "pytest-asyncio>=1.3.0",
    "types-aiofiles>=24.1.0.20250606",
    "types-requests>=2.32.4.20250611",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
